--- a/giugno.html
+++ b/giugno.html
@@ -1,4 +1,4 @@
- <!doctype html>
+<!doctype html>
 <html lang="it">
 <head>
   <meta charset="utf-8">
@@ -98,10 +98,11 @@ Nelle immagini sottostanti, cappella funeraria della famiglia Nèttore Neri e la
 <p><big><strong><center>Vuoi saperne di più su Nèttore Neri?<br>Allora, visita il suo <a href="Neri2.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
 
 <p><big><strong>25 giugno 1959</strong>: morì a Vignola <strong>UGO ROLI</strong>, educatore, scrittore, poeta, studioso di storia (anche locale), avvocato, funzionario pubblico ed enigmografo. Fu sepolto nel cimitero cittadino.<br><br>
-Venuto alla luce a Vignola il 23 febbraio 1887, Ugo Roli svolse dapprima la professione di maestro elementare (tra Emilia e Toscana) e poi quella di avvocato (a Vignola e a Modena). Nel 1921 egli fu per un brevissimo periodo commissario prefettizio nel paese natale.<br>
-Più volte decorato durante la Prima Guerra Mondiale, Roli si distinse a livello nazionale come enigmografo (con lo pseudonimo di «Fiordaliso») e come autore di libri per gli alunni delle Scuole Elementari.<br>
-Il nostro personaggio figurò tra i fondatori del <i>Circolo Amicizia</i> di Vignola (1919), un’aggregazione di tipo ricreativo della quale egli fu altresì il primo presidente, e dedicò parecchi studi alla storia patria e alla storia della sua terra d’origine.<br>  
-Oggigiorno Roli è ricordato soprattutto per l’interessante attività di poeta: ancora molto conosciute e apprezzate sono, in special modo, le due raccolte di versi <i>Faléster</i> (1936, in dialetto modenese) e <i>Faléster dl’Inféren</i> (1951, in italiano e in dialetto).
+
+Venuto alla luce a Vignola il 23 febbraio 1887, questo personaggio ricevette l’abilitazione alla docenza elementare nel 1906 dopo essere stato allievo della Regia Scuola Normale Maschile di Forlimpopoli (ora in Provincia di Forlì-Cesena); negli anni successivi, svolse la professione di maestro elementare (tra Emilia e Toscana), inizialmente mentre seguiva i corsi di perfezionamento all’Università di Bologna e alla Scuola Samaritana Bolognese dell’Università Popolare “G. Garibaldi”.<br>
+Poco dopo la conclusione della Prima Guerra Mondiale, nel corso della quale era stato più volte decorato per avere combattuto anche in prima linea con i gradi di ufficiale di Stato Maggiore, il nostro personaggio abbandonò il mondo della scuola per diventare avvocato grazie alla laurea in Giurisprudenza che aveva ottenuto all’Università di Modena nel 1916. Egli svolse questa professione fino alla quiescenza tanto nel luogo d’origine quanto nella città geminiana, ed esercitò per un brevissimo periodo la carica di commissario prefettizio a Vignola (1921).<br>
+Nel 1919 Roli figurò tra i fondatori del <i>Circolo Amicizia</i> del suo paese natale, un’aggregazione di tipo ricreativo della quale egli fu altresì il primo presidente (nel 2006 l’unione tra il <i>Circolo Amicizia</i> e un altro ente sociale del territorio, il <i>Club Jacopo Barozzi</i>, istituito nel 1975 con scopi ricreativi e artistico-culturali, diede vita al tuttora esistente <i>Circolo Paradisi</i>).<br>
+Durante la prima maturità, il nostro personaggio fece uscire libri scolastici per gli alunni delle Scuole Elementari, pubblicazioni che gli diedero una certa fama a livello nazionale, e poi divenne un acclamato enigmografo (con lo pseudonimo di «Fiordaliso»); inoltre, dedicò parecchi studi alla storia patria e alla storia della sua terra d’origine. Attualmente, tuttavia, egli viene in special modo ricordato per l’interessante attività di poeta, il cui apice qualitativo va riconosciuto nelle due raccolte di versi <i>Faléster</i> (1936, in dialetto modenese) e <i>Faléster dl’Inféren</i> (1951, in italiano e in dialetto).<br><br>
 Nell’immagine qui sotto, la tomba di Ugo Roli e quella di alcuni suoi familiari al cimitero di Vignola.</big></p><br>
 <img src="img/celebri vignolesi/Roli Ugo/tomba intera.jpg" width="800" height="600"><br><br>
 <p><strong><big><center>Vuoi saperne di più su Ugo Roli?<br>Allora, visita il suo <a href="Roli.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
