--- a/Soli1.html
+++ b/Soli1.html
@@ -75,6 +75,10 @@ Un <i>Autoritratto</i> di Soli, dipinto nel 1805 (o negli anni immediatamente su
 Per volontà degli eredi del grande architetto, il Fondo Soli venne affidato nel 1927 alla custodia e alla cura della modenese Accademia di Scienze Lettere e Arti (dal 1959, Accademia Nazionale di Scienze Lettere e Arti); esso comprende una raccolta grafica, un archivio e una ricca biblioteca.</big></p><br><br><br>
 
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
+
+<p><big>Nella prima immagine, una recentissima fotografia del punto dell’antica Ca’ de’ Varroni (o Varoni), oggi Casa Parmiggiani, ove da non meno di un secolo figura la lapide in ricordo di Soli, il quale venne alla luce in quest’abitazione di campagna; nel corso del tempo, anche in anni abbastanza prossimi a noi, l’immobile è stato oggetto di lavori di ristrutturazione. Nella seconda immagine, uno zoom sulla lapide apposta poco sopra la porta della porzione dello stabile immortalata nello scatto precedente. Si ringrazia la famiglia Parmiggiani per averci consentito di fotografare questa e altre parti di tale edificio di cui è proprietaria da oltre cento anni.</big><br>
+	<center><img src="img/celebri vignolesi/Soli Giuseppe Maria/facciata.jpg" width="400" height="680"></center><br><br>
+	<center><img src="img/celebri vignolesi/Soli Giuseppe Maria/lapide.jpg" width="730" height="420"></center><br><br><br>
 	
 <p><center><big><big>L’<i>Autoritratto</i> di Soli (olio su tela) attualmente conservato nel Casino Tosi Bellucci (già Bellucci),<br> dal 1916 Residenza Municipale di Vignola. Fonte: google.com</big></big></center><br>
 	<img src="img/celebri vignolesi/Soli Giuseppe Maria/Autoritratto.jpg" width="450" height="620"><br><br><br>
