--- a/Minghelli.html
+++ b/Minghelli.html
@@ -54,7 +54,9 @@ A Minghelli il paese natale ha voluto dedicare una strada. Inoltre, sono tuttora
 <p><big>Porzione degli interventi realizzati a tempera da Minghelli dentro la Villa Bellucci (poi Tosi Bellucci, dal 1916 Residenza Municipale di Vignola), dimora signorile progettata da <strong>Giuseppe Maria Soli</strong> nel 1789, ma costruita solo tra (probabilmente) il 1815 e il 1823 o 1824. Si tratta, in particolare, delle pitture che sovrastano il vano dello scalone e che culminano nella decorazione con putti della cupola. Sul finire della Seconda Guerra Mondiale, la notte del 15 aprile 1945, un bombardamento aereo degli Alleati colpì l’edificio, ma per fortuna le aree dipinte all’interno subirono danni circoscritti.</big></p>
 <center><img src="img/celebri vignolesi/Minghelli/soffitto.jpg" width="900" height="600"></center><br><br>
 <center><img src="img/celebri vignolesi/Minghelli/soffitto2.jpg"="900" height="600"></center><br><br>
-<p><big><big><center>Villa Bellucci, soffitto della Sala dell’aquila estense (particolare), tempera su plafond.<br>Questa stanza è ora l’ufficio del sindaco di Vignola.</center></big></big></p>
+<p><big><big><center>Villa Bellucci, <i>Il mito del flauto di Pan</i>, una delle quattro lunette del sottovolto eseguite a tempera da Minghelli<br> nella Sala di Bacco e Cerere (o Sala di Pan), oggi Sala Giunta, al primo piano della dimora signorile.</center></big></big></p>
+<center><img src="img/celebri vignolesi/Minghelli/pan.jpg" width"800" height="450"></center><br><br>
+<p><big><big><center>Villa Bellucci, soffitto della Sala dell’Aquila Estense (particolare), tempera su plafond.<br>Questa stanza, al primo piano della dimora signorile, è ora l’ufficio del sindaco di Vignola.</center></big></big></p>
 <center><img src="img/celebri vignolesi/Minghelli/aquila.jpg" width="500" height="640"></center><br><br>
 <p><big><big><center>Lapide funeraria di Minghelli all’interno del cimitero di Vignola.</center></big></big></p>
 <center><img src="img/celebri vignolesi/Minghelli/tomba.jpg" width= "700" height="450"></center><br><br><br>
