--- a/Soli2.html
+++ b/Soli2.html
@@ -60,8 +60,10 @@
 <img src="img/celebri vignolesi/Soli Ivo/fanciullainbici.jpg" width="505" height="670"><br><br>
 <p><center><big><big><i>Fanciulla seduta</i> (1970-1975), bronzo; collezione privata.</big></big></center><br>
 <img src="img/celebri vignolesi/Soli Ivo/fanciullaseduta.jpg" width="450" height="600"><br><br>
-<p><center><big><big><i>Pietà</i>, bronzo dorato, data sconosciuta. Vignola, chiesa dei Santi Nazario e Celso.</big></big></center><br>
+<p><center><big><big><i>Pietà</i> (data sconosciuta), bronzo dorato; Vignola, chiesa dei Santi Nazario e Celso.</big></big></center><br>
 <img src="img/celebri vignolesi/Soli Ivo/pietà.jpg" width="1000" height="600"><br><br><br>
+<p><center><big><big><i>San Francesco</i> (data sconosciuta), bronzo; Vignola, chiesa dell'Immacolata Concezione (tempio dei Frati Cappuccini).<br>Lo stampo di quest'opera è stato utilizzato anche per la fusione della statua in bronzo<br> posizionata presso la tomba del medesimo Soli e di alcuni suoi familiari, nel cimitero di Vignola Capoluogo.</big></big></center><br>
+<img src="img/celebri vignolesi/Soli Ivo/sanfrancesco.jpg" width="390" height="700"><br><br><br>
 <p><center><big><big>Medaglia per il centesimo anniversario della fondazione della Cassa di Risparmio di Vignola (1974). <br> Bronzo, forma circolare, diametro di 45 mm e contorno liscio. Prima immagine, <i>recto</i>: ragazza seduta di 3/4 a destra; <br> in alto a sinistra, in piccolo e con carattere tutto maiuscolo, «IVO SOLI». <br> Seconda immagine, <i>verso</i>: in tutto maiuscolo, «CENTO ANNI DELLA CASSA DI RISPARMIO DI VIGNOLA 1974»; <br> tale iscrizione circonda quattro api presso un favo (si tratta di un’immagine che ricorda, un po’ vagamente, <br> lo stemma ufficiale della Cassa di Risparmio di Vignola). Fonte: google.com</big></big></center><br>
 <img src="img/celebri vignolesi/Soli Ivo/Recto.jpg" width="515" height="510"><br><br>
 <img src="img/celebri vignolesi/Soli Ivo/Verso.jpg" width="515" height="510"><br><br><br>
