--- a/Plessi1.html
+++ b/Plessi1.html
@@ -67,7 +67,7 @@ Nel 1925 Vignola gli intitolò una nuova arteria stradale, che da quel momento n
 <img src="img/celebri vignolesi/Plessi Alessandro/biblioteca.jpg" width="750" height="550"><br><br><br>
 <p><center><big><big>Decreto di nomina di Plessi a sindaco di Vignola, datato 10 marzo 1860 e firmato da Luigi Carlo Farini,<br> governatore delle Regie Provincie dell’Emilia. Fonte: Raccolta famiglia Plessi.</big></big></center><br>
 <img src="img/celebri vignolesi/Plessi Alessandro/nomina.jpg" width="500" height="680"><br><br><br>
-<p><center><big><big>Il palazzo avito dei Plessi, a Vignola, recentemente immortalato da Via Giuseppe Garibaldi<br> (detta, fino al 1882, Via Maggiore).<br> L’accesso, qui non visibile, era ed è tuttora situato sul lato posto lungo Via Vermilio Bonesi<br>
+<p><center><big><big>Il palazzo avito dei Plessi, a Vignola, immortalato di recente da Via Giuseppe Garibaldi<br> (detta, dal 1865 al 1882, Via Maggiore; in precedenza, semplicemente Piazza).<br> L’accesso, qui non visibile, era ed è tuttora situato sul lato posto lungo Via Vermilio Bonesi<br>
 (denominata, fino al 1865, Contrada di Mezzo; fino al 1922, Via Giacomo Cantelli; fino al 1945, Via Aurelio Sanley).</big></big></center><br>
 <img src="img/celebri vignolesi/Plessi Alessandro/palazzo.jpg" width="680" height="520"><br><br><br>
 <center><big><big>Cappella funebre di Plessi, cimitero di Vignola.<br> Il busto fu eseguito da Giuseppe Graziosi (1879-1942), mentre l’iscrizione venne dettata da Tommaso Casini (1859-1917).</center></big></big><br>
