--- a/Rodolfi.html
+++ b/Rodolfi.html
@@ -48,13 +48,17 @@ Inoltre, don Rodolfi promosse l’abbellimento la chiesa plebana (notevole, in s
 Nel paese natale, questo infaticabile e benemerito personaggio è ricordato con una via e con una lapide inaugurata nel 1897 (oggi figura al primo piano della Residenza Municipale di Vignola, ma un tempo si trovava nella Biblioteca Comunale del paese).</big></p><br><br>
 
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
+
+<p><big>Porzione del borgo di Vignola vista dalla località attualmente denominata Formica (un tempo, essa faceva parte del poco più ampio territorio Zenzano, che fino al 1859 costituiva una frazione del Comune di Vignola e che in seguito diventò frazione del Comune di Savignano sul Panaro) in un dipinto anonimo risalente con ogni probabilità al periodo centrale del XIX secolo, dunque all’epoca della prima maturità di don Rodolfi; collezione privata. La presente riproduzione fotografica dell’opera è tratta dall’immagine contenuta in una pagina pieghevole (fuori testo) del libro <i>Cento anni di vita e di attività della Cassa di Risparmio di Vignola 1874-1974. Antiche istituzioni bancarie nella storiografia vignolese</i>, Vignola (MO), s.n. [Bologna, Arti Grafiche Tamari], 1974.</big></big></p>
+<center><img src="img/celebri vignolesi/Rodolfi Giovanni/borgo.jpg" width="640" height="460"></center></p><br>
+
 <p><big><big><center>Frontespizio di <i>I parlari italiani in Certaldo alla festa del V centenario di messer Giovanni Boccacci</i> [<i>sic</i>].<br> <i>Omaggio di Giovanni Papanti</i>, In Livorno, Coi tipi di Francesco Vigo, 1875. Fonte: google.com</center></big></big></p>
 <center><img src="img/celebri vignolesi/Rodolfi Giovanni/content3.jpg" width="440" height="660"></center></p><br>
 <p><big><big><center><i>I parlari italiani in Certaldo</i> […], cit., p. 302: prime righe del testo della riscrittura in dialetto vignolese<br> vergata da don Rodolfi della Novella IX della Giornata I del <i>Decameron</i>.</center></big></big></p>
 <center><img src="img/celebri vignolesi/Rodolfi Giovanni/content1.jpg" width="440" height="660"></center></p><br>
 <p><big><big><center><i>I parlari italiani in Certaldo</i> […], cit., p. 303: parte rimanente del testo della riscrittura in dialetto vignolese<br> vergata da don Rodolfi della Novella IX della Giornata I del <i>Decameron</i>.</center></big></big></p>
 <center><img src="img/celebri vignolesi/Rodolfi Giovanni/content2.jpg" width="440" height="660"></center></p><br>
-<p><big>Frontespizio dell’opuscolo intitolato <i>Solenne Commemorazione di D. Giovanni Rodolfi di Vignola</i> (Vignola, Tipografia di Antonio Monti, 1897). Si tratta di una pubblicazione che riporta il testo del discorso pronunciato da Alessandro Plessi il 3 ottobre 1897 nella Sala dei Tronchi d’Albero della rocca (al tempo, sede della Biblioteca Comunale di Vignola), in occasione dell’inaugurazione della lapide in ricordo di don Rodolfi (vedi qui sotto).</big></p>
+<p><big><big><center>Frontespizio dell’opuscolo intitolato <i>Solenne Commemorazione di D. Giovanni Rodolfi di Vignola</i><br> (Vignola, Tipografia di Antonio Monti, 1897). Si tratta di una pubblicazione che riporta il testo<br> del discorso pronunciato da Alessandro Plessi il 3 ottobre 1897 nella Sala dei Tronchi d’Albero della rocca<br> (al tempo, sede della Biblioteca Comunale di Vignola), in occasione<br> dell’inaugurazione della lapide in ricordo di don Rodolfi (vedi qui sotto).</center></big></big></p>
 <center><img src="img/celebri vignolesi/Rodolfi Giovanni/commemorazione.jpg" width="450" height="650"></center></p><br>
 <p><big><big><center>Lapide (in marmo di Carrara) destinata a ricordare don Rodolfi e la sua attività a favore dei concittadini.<br> Inizialmente collocata nella sede originaria della Biblioteca Comunale di Vignola, <br> ossia nella Sala dei Tronchi d’Albero della locale rocca, questa lapide oggigiorno risulta affissa<br> al primo piano della Villa Tosi Bellucci (edificio che dal 1916 è la Residenza Municipale di Vignola).</center></big></big></p>
 <center><img src="img/celebri vignolesi/Rodolfi Giovanni/lapide.jpg" width="400" height="700"></center></p><br>
@@ -62,7 +66,7 @@ Nel paese natale, questo infaticabile e benemerito personaggio è ricordato con 
 <center><img src="img/celebri vignolesi/Rodolfi Giovanni/cimitero.jpg" width="780" height="470"></center></p><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></big></p><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023, 2024 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
