--- a/Garavini.html
+++ b/Garavini.html
@@ -29,7 +29,7 @@
 <section>
 	<p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br><br>
 <h3><center><big><big>CARLO GARAVINI</big></big><br><br>
-<big>(1807 - non prima del 1879)</big></center></h3><br><br><br>
+<big>(1807 - probabilmente non prima del 1885)</big></center></h3><br><br><br>
 	<h4><big><big><big><big><strong><center>PROFILO BIOGRAFICO</center></strong></big></big></big></big></h4><br><br>
 	<p><big><strong>CARLO GARAVINI</strong>, diplomatico, esploratore, avventuriero, commerciante, geografo e armatore, nacque a Vignola il 6 maggio 1807.<br>
 
@@ -55,7 +55,7 @@ Garavini aveva un fratello minore di nome Barlamo (1810-1862), il quale era un v
 
 Nel 1867  il nostro personaggio, appassionato d’arte, riuscì a rintracciare e ad acquistare il disperso <i>Autoritratto</i> (olio su tela) di <strong>Giuseppe Maria Soli</strong> (1747-1822), facendolo poi giungere alla sorella Luigia da poco rimasta vedova. Questo dipinto, che risale all’età matura di Soli (senza dubbio, venne eseguito non prima del 1805), è da tempo conservato nel suddetto Casino (nel 1885, tuttavia, il quadro – insieme con quello di Violi appena ricordato e altre opere d’arte – si trovava nell’ufficio del sindaco in rocca) e ha subìto un restauro nel 2015 a cura del laboratorio della già menzionata Graziosi.<br>  
 
-Allo stato attuale degli studi, non siamo al corrente né della data né del luogo della morte di Garavini (alla fine del 1879, però, egli risultava sicuramente in vita; forse lo era anche nel 1885).</big></p><br><br><br>
+Allo stato attuale degli studi, non siamo al corrente né della data né del luogo della morte di Garavini (alla fine del 1879, però, egli risultava sicuramente in vita; forse lo era ancora nel 1883 e, pure, nel 1885).</big></p><br><br><br>
 
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 <p><center><big><big>Arsenale della Marina di Algeri, incisione anonima del 1835. Fonte: google.com</center></big></big></p>
