--- a/maggio.html
+++ b/maggio.html
@@ -50,7 +50,7 @@ Presa dimora a Napoli, nel 1840 Garavini vi sposò Carolina Sauvé, ragazza appa
 
 Nel 1867 Garavini, appassionato d’arte, riuscì a rintracciare e ad acquistare il disperso <i>Autoritratto</i> di <strong>Giuseppe Maria Soli</strong> (1747-1822), risalente a non prima del 1805, e lo fece giungere alla sorella Luigia (1796-1870), appena rimasta vedova di Giambattista Bellucci (1781-1866), uno degli uomini più stimati e ricchi della Vignola ottocentesca.<br>
 
-Non conosciamo né la data né il luogo della scomparsa del nostro personaggio, ma sicuramente era ancora in vita nel 1879.<br><br> 
+Non conosciamo né la data né il luogo della scomparsa del nostro personaggio, ma sicuramente era in vita nel 1879; forse lo era ancora nel 1883 e – pure – due anni dopo.<br><br> 
 
 Nell’immagine qui sotto, una foto recente del Palazzo D’Ambra (già Villa Garavini), a Ischia.</big></p><br><br>
 <img src="img/celebri vignolesi/Garavini Carlo/palazzo Ambra.jpg" width="850" height="600"><br><br><br>
