--- a/Favoleggiatore.html
+++ b/Favoleggiatore.html
@@ -31,7 +31,7 @@
   <p><big><strong><a href="Selmi.html">Profilo di Selmi</a></strong></big></p><br><br><br>
   <h2><strong><big>IL FAVOLEGGIATORE</big></strong></h2><br><br>
   <center>
-  	<p><big>Nel febbraio 2022 è cominciata la nostra trascrizione delle favole che compongono <i><strong>Il Favoleggiatore</strong></i> (dati completi di questo volumetto selmiano: <i>Il Favoleggiatore ossia raccolta di favole in lingua volgare scelte, emendate e purgate non che opportunamente annotate</i> ad usum serenissimi saeculi XIX <i>dal M. di S.</i>, Torino, Tip. di G.B. Paravia e Comp., 1857).<br> Nel passaggio dal testo a stampa al testo trascritto, per quanto riguarda gli aspetti grafici, abbiamo sistematicamente conservato sia le forme oggi (e, talora, già nel XIX secolo) desuete sia quelle da tempo considerate scorrette e da evitarsi (inclusi i monosillabi «quà», «quì» e «prò» con l’accento, elisioni come «gl’occhi» e dove d’abitudine si mantiene la «i» diacritica della radice nei verbi che terminano in «-ciare» davanti alle desinenze che cominciano per «i» e per «e») sia i probabili refusi (come «or’ora»), cancellato il punto fermo dopo il titolo di ogni favola e normalizzato all’uso odierno gli accenti; le rare modifiche di altra natura sono state messe in evidenza caso per caso (ad esempio, in passi sporadici si è proceduto a minimi interventi sulla punteggiatura). Le note asteriscate sono di Sara Scaglioni e Piero Venturelli.</big></p><br><br>
+  	<p><big>Qui di seguito, presentiamo la trascrizione integrale di <i><strong>Il Favoleggiatore</strong></i> (dati completi di questo volumetto selmiano: <i>Il Favoleggiatore ossia raccolta di favole in lingua volgare scelte, emendate e purgate non che opportunamente annotate</i> ad usum serenissimi saeculi XIX <i>dal M. di S.</i>, Torino, Tip. di G.B. Paravia e Comp., 1857).<br> Nel passaggio dal testo a stampa al testo trascritto, per quanto riguarda gli aspetti grafici, abbiamo sistematicamente conservato sia le forme oggi (e, talora, già nel XIX secolo) desuete sia quelle da tempo considerate scorrette e da evitarsi (inclusi i monosillabi «quà», «quì» e «prò» con l’accento, elisioni come «gl’occhi» e dove d’abitudine si mantiene la «i» diacritica della radice nei verbi che terminano in «-ciare» davanti alle desinenze che cominciano per «i» e per «e») sia i probabili refusi (come «or’ora»), cancellato il punto fermo dopo il titolo di ogni favola e normalizzato all’uso odierno gli accenti; le rare modifiche di altra natura sono state messe in evidenza caso per caso (ad esempio, in passi sporadici si è proceduto a minimi interventi sulla punteggiatura). Le note asteriscate sono di Sara Scaglioni e Piero Venturelli.</big></p><br><br>
 
 <p><big><a href="dedica.html">DEDICA</a></big></p><br><br><br>
 
@@ -129,7 +129,7 @@
  <br><br><br><br>
   <p><big><strong><a href="Selmi.html">Profilo di Selmi</a></strong></big></p><br><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023, 2024 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni  
