--- a/Dughetti.html
+++ b/Dughetti.html
@@ -38,6 +38,8 @@
 	<center><img src="img/celebri vignolesi/Dughetti/autoritratto.jpg" width="500" height="670"></center><br>
 <p><center><big><big><i>Preghiera</i> (1969), miniatura su avorio, 13x10 cm; collezione privata. Fonte: google.com</big></big></center><br>
 	<center><img src="img/celebri vignolesi/Dughetti/preghiera.jpg" width="480" height="610"></center><br>
+	<p><center><big><big><i>Pesche</i> (1973), miniatura su avorio, 12x9 cm; collezione privata.<br> Fonte: google.com</big></big></center><br>
+	<center><img src="img/celebri vignolesi/Dughetti/pesche.jpg" width="450" height="570"></center><br>
 <p><center><big><big><i>Ritratto di Brunetta Pieraccini</i> (1976), pastello su materiale speciale, 30x24 cm; collezione privata. Fonte: google.com</big></big></center><br>
 	<center><img src="img/celebri vignolesi/Dughetti/brunetta.jpg" width="500" height="620"></center><br>
 <p><center><big><big><i>Ritratto di Ruth Baiter - Aadorf Schweiz</i> (1979), miniatura su avorio, cm 10x15; collezione privata. Fonte: google.com</big></big></center><br>
