--- a/Rodolfi.html
+++ b/Rodolfi.html
@@ -48,10 +48,11 @@ Inoltre, don Rodolfi promosse l’abbellimento la chiesa plebana (notevole, in s
 Nel paese natale, questo infaticabile e benemerito personaggio è ricordato con una via e con una lapide inaugurata nel 1897 (oggi figura al primo piano della Residenza Municipale di Vignola, ma un tempo si trovava nella Biblioteca Comunale del paese).</big></p><br><br>
 
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
-
+	
+<p><big><big><center>Torre Nonantolana della rocca. Sulla sua sommità, aveva sede il Gabinetto Meteorologico<br> del quale don Rodolfi fu per diversi anni osservatore.</center></big></big></p>
+<center><img src="img/celebri vignolesi/Rodolfi Giovanni/torre.jpg" width="400" height="650"></center><br><br>
 <p><big>Porzione del borgo di Vignola vista dalla località attualmente denominata Formica (un tempo, essa faceva parte del poco più ampio territorio Zenzano, che fino al 1859 costituiva una frazione del Comune di Vignola e che in seguito diventò frazione del Comune di Savignano sul Panaro) in un dipinto anonimo risalente con ogni probabilità al periodo centrale del XIX secolo, dunque all’epoca della prima maturità di don Rodolfi; collezione privata. La presente riproduzione fotografica dell’opera è tratta dall’immagine contenuta in una pagina pieghevole (fuori testo) del libro <i>Cento anni di vita e di attività della Cassa di Risparmio di Vignola 1874-1974. Antiche istituzioni bancarie nella storiografia vignolese</i>, Vignola (MO), s.n. [Bologna, Arti Grafiche Tamari], 1974.</big></big></p>
 <center><img src="img/celebri vignolesi/Rodolfi Giovanni/borgo.jpg" width="640" height="460"></center></p><br>
-
 <p><big><big><center>Frontespizio di <i>I parlari italiani in Certaldo alla festa del V centenario di messer Giovanni Boccacci</i> [<i>sic</i>].<br> <i>Omaggio di Giovanni Papanti</i>, In Livorno, Coi tipi di Francesco Vigo, 1875. Fonte: google.com</center></big></big></p>
 <center><img src="img/celebri vignolesi/Rodolfi Giovanni/content3.jpg" width="440" height="660"></center></p><br>
 <p><big><big><center><i>I parlari italiani in Certaldo</i> […], cit., p. 302: prime righe del testo della riscrittura in dialetto vignolese<br> vergata da don Rodolfi della Novella IX della Giornata I del <i>Decameron</i>.</center></big></big></p>
