--- a/Muratori.html
+++ b/Muratori.html
@@ -144,6 +144,8 @@ Dopo la scomparsa di Muratori, uno dei personaggi che negli Stati estensi più s
 <img src="img/FOTO VARIE/Pippo.jpg" width="470" height="660"><br><br><br>
 <p><center><big>Casa natale del grande storico ed erudito situata fra le odierne Vie Selmi e Muratori (è Monumento Nazionale dal 1940).<br> Questa fotografia è stata scattata il 15 febbraio 2020, in occasione della riapertura al pubblico dello studiolo (vedi qui sotto).</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/casa natale esterna.jpg" width="700" height="500"><br><br>
+<p><center><big>Lapide che sormonta la porta d'accesso alla casa natale di Muratori.</big></center></p>
+<img src="img/celebri vignolesi/Muratori Lodovico Antonio/lapidecasa.JPG" width="660" height="410"><br><br>
 <p><center><big>Particolare dello studiolo (o camera genetliaca) di Muratori.<br> Anche questa fotografia risale al 15 febbraio 2020.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/studiolo.jpg" width="375" height="640"><br><br>
 <p><center><big>Lapide apposta sul muro esterno della prima scuola di Muratori (oggi canonica), a Vignola.</big></center></p>
