--- a/Selmi.html
+++ b/Selmi.html
@@ -235,8 +235,8 @@ Ad avviso dell’insigne Vignolese, infine, Dante condensava in sé le migliori 
 	<center><img src="img/celebri vignolesi/Selmi/Busto e lapide.jpg" width="390" height="680"></center><br><br>
 	<p><center><big>Lapide commemorativa della cappella funebre di Selmi.</big></center></p>
 		<center><img src="img/celebri vignolesi/Selmi/lapide.jpg" width="450" height="700"></center><br><br>
-<p><center><big>Monumento in ricordo di Selmi (1882), Palazzo del Rettorato dell’Università di Bologna.<br> Il busto e la lapide furono eseguiti da Giuseppe Pacchioni (1819-1887),<br> mentre l’epigrafe venne dettata da Luigi Calori (1807-1896).<br>  
-Per commemorare Selmi, che morì come presidente in carica<br> della Società farmaceutica delle Romagne (con sede a Bologna),<br> essa nel 1881 decise di sciogliersi, di erogare il fondo sociale a quel fine <br> e di promuovere la nascita di un Comitato per le onoranze dell’illustre defunto. <br> In tutto ciò va ricercata l’origine di questo monumento.</big></center></p>
+<p><big>Monumento in ricordo di Selmi (1882), Palazzo del Rettorato dell’Università di Bologna. Il busto e la lapide furono eseguiti da Giuseppe Pacchioni (1819-1887), mentre l’epigrafe venne dettata da Luigi Calori (1807-1896).  
+Per commemorare Selmi, che morì come presidente in carica della Società farmaceutica delle Romagne (con sede a Bologna), essa nel 1881 decise di sciogliersi, di erogare il fondo sociale a quel fine e di promuovere la nascita di un Comitato per le onoranze dell’illustre defunto. In tutto ciò va ricercata l’origine di questo monumento.</big></p>
 		<center><img src="img/celebri vignolesi/Selmi/rettorato.jpg" width="470" height="600"></center><br><br>
 			<p><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></p><br><br>
 </section>
