--- a/Fontana.html
+++ b/Fontana.html
@@ -36,13 +36,17 @@
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 <p><center><big><big>Edificio che tradizionalmente viene considerato la casa natale di Fontana.<br> È situato nell’attuale Piazza Boncompagni.</big></big></center><br>
 <center><img src="img/celebri vignolesi/Fontana Giovanni/casa natale.jpg" width="295" height="570"></center></p>
-<p><center><big><big>Barthélemy Fenis (attivo fino al 1669), ritratto postumo di Giovanni Fontana, incisione. Si trova in<br> <i>Catalogo de Vescovi Modonesi, e racconti dell’attioni loro nel reggere varie Chiese dentro, e fuori dell’Italia<br> con molte figure di quelli cauate da suoi Ritratti naturali: Opera di D. Lodovico Vedriani da Modona, dedicata<br> all’Illustrissimo, e Reuerendissimo Sig. Conte Ettorre Molza vescovo di detta Città</i>, In Modona,<br> Per Bartolomeo Soliani Stampator Duc., 1669, p. 143. Fonte: google.com </big></big></center><br>
+<p><center><big><big>Lapide apposta sulla facciata della presunta casa natale di Fontana.</big></big></center></p><br>
+<center><img src="img/celebri vignolesi/Fontana Giovanni/lapidepresunta.jpg" width="675" height="430"></center></p><br>
+	<p><center><big><big>Barthélemy Fenis (attivo fino al 1669), ritratto postumo di Giovanni Fontana, incisione. Si trova in<br> <i>Catalogo de Vescovi Modonesi, e racconti dell’attioni loro nel reggere varie Chiese dentro, e fuori dell’Italia<br> con molte figure di quelli cauate da suoi Ritratti naturali: Opera di D. Lodovico Vedriani da Modona, dedicata<br> all’Illustrissimo, e Reuerendissimo Sig. Conte Ettorre Molza vescovo di detta Città</i>, In Modona,<br> Per Bartolomeo Soliani Stampator Duc., 1669, p. 143. Fonte: google.com </big></big></center><br>
 <center><img src="img/celebri vignolesi/Fontana Giovanni/Fontana incisione.jpg" width="430" height="630"></center><br>
+<p><center><big><big>Riproduzione antica dello stemma del vescovo Giovanni Fontana.<br> È al presente affissa su un muro esterno dell’attuale Casa Canonica di Vignola, nel cortiletto.</big></big></center></p><br>
+<center><img src="img/celebri vignolesi/Fontana Giovanni/stemma.JPG" width="730" height="630"></center></p><br>	
 	<p><center><big><big>Lapide che menziona i lasciti di Fontana in favore della vignolese Società del Santo Rosario.<br>È collocata nella chiesa dei Santi Nazario e Celso a Vignola.</big></big></center><br>
 <center><img src="img/celebri vignolesi/Fontana Giovanni/lapidechiesa.jpg" width="450" height="600"></center></p><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></big></p><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023, 2024 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
