--- a/Dughetti.html
+++ b/Dughetti.html
@@ -38,7 +38,7 @@
 	<center><img src="img/celebri vignolesi/Dughetti/autoritratto.jpg" width="500" height="670"></center><br>
 <p><center><big><big><i>Preghiera</i> (1969), miniatura su avorio, 13x10 cm; collezione privata. Fonte: google.com</big></big></center><br>
 	<center><img src="img/celebri vignolesi/Dughetti/preghiera.jpg" width="480" height="610"></center><br>
-	<p><center><big><big><i>Pesche</i> (1973), miniatura su avorio, 12x9 cm; collezione privata.<br> Fonte: google.com</big></big></center><br>
+	<p><center><big><big><i>Pesche</i> (1973), miniatura su avorio, 12x9 cm; collezione privata. Fonte: google.com</big></big></center><br>
 	<center><img src="img/celebri vignolesi/Dughetti/pesche.jpg" width="450" height="570"></center><br>
 <p><center><big><big><i>Ritratto di Brunetta Pieraccini</i> (1976), pastello su materiale speciale, 30x24 cm; collezione privata. Fonte: google.com</big></big></center><br>
 	<center><img src="img/celebri vignolesi/Dughetti/brunetta.jpg" width="500" height="620"></center><br>
@@ -46,6 +46,8 @@
 	<center><img src="img/celebri vignolesi/Dughetti/ruth.jpg" width="650" height="430"></center><br>
 <p><center><big><big><i>Ritratto del papa Giovanni Paolo II</i> (1980), miniatura su avorio, 17x12 cm;<br>  Città del Vaticano, Collezioni Pontificie. Fonte: google.com</big></big></center><br>
 	<center><img src="img/celebri vignolesi/Dughetti/ritratto.jpg" width="450" height="620"></center><br><br>
+<p><big>Sovraccoperta, in corrispondenza con la prima di copertina, del libro <i>Giancarlo Dughetti</i>, ordinamento cronologico a cura di Giorgio Ghelfi, testimonianze di Pietro Annigoni, Umberto Baldini, Renzo Biasion, Nazario Boschini, Alfonso Gatto, Tommaso Paloscia, nota biografica di Vasco Ferretti, Verona, Edizioni d’arte Ghelfi, 1986; va notato che qui abbiamo omesso il sottotitolo <i>Miniature</i>, giacché risulta assente nel frontespizio, e che la stampa del volume terminò nel settembre del 1986, dunque otto mesi dopo la scomparsa dell'artista. Fonte dell'esemplare fotografato: collezione privata.</big><br>
+	<center><img src="img/celebri vignolesi/Dughetti/libro.JPG" width="480" height="650"></center><br><br>
 
 	<p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></center></p><br>
 </section>
