--- a/Chi siamo.html
+++ b/Chi siamo.html
@@ -50,6 +50,33 @@ I valori della tradizione vanno intesi non già come oggetto di ammirazione reto
 La tradizione può dirsi realmente prolifica e vitale solo quando gli uomini del presente studiano il passato e si confrontano con esso in maniera propositiva e senza tentazioni nostalgiche. La tradizione è l’essere nel divenire: conserva i ponti con il mondo e il tempo, rifiutando di concepire la verità come monade separata da ciò che è accaduto e da ciò che accadrà.<br>
 Bisogna considerare la tradizione quale atto comunitario di amore della vita e di inimicizia verso la morte: «trasmettere» è il contrario di «smettere», «dismettere», «tagliare»; la tradizione, dunque, è un’arma capace d’impedire che le esistenze individuali si sradichino da ogni contesto, ossia che l’ereditato legame organico tra l’uomo e le cose venga disarticolato. In altri termini, la tradizione dà lo scacco al sentimento d’abbandono e al deteriorarsi del senso d’appartenenza dell’essere umano in seno alla propria comunità.<br>
 Lungi dall’offrire paradisi in terra o felicità definitive, la tradizione costituisce un orientamento di vita, concorre a ordinare la scala delle priorità, è un senso innato da rielaborare continuamente nel rapporto con il mondo.</big></p><br><br><br>
+
+<p><strong><big><big>Le nostre <strong>COLLABORAZIONI</strong></big></big></strong></p><br>
+
+<p><big><strong>Ottobre 2024</strong>: Camminata storico-artistica nel borgo di Vignola.</p></big>
+
+<p><big>Nell’ambito della manifestazione Autunno a Vignola e in collaborazione con <i>La Banda della Trottola APS</i>, gli <i>Amici dell’Arte APS</i> e PRO LOCO Vignola.</p></big><br>
+
+<p><big><strong>Settembre 2024</strong>: Camminata al Santuario della Beata Vergine della Pieve.</p></big>
+
+<p><big>In collaborazione con la Casa Residenza per Anziani (CRA) di Vignola e <i>La Banda della Trottola APS</i>, e nell’ambito delle iniziative messe in calendario dal Distretto di Vignola per la <i>Settimana dell’Alzheimer 2024</i>.</p></big><br>
+
+<p><big><strong>Marzo 2024</strong>: Partecipazione alla realizzazione dell’Annuario della cinquantatreesima edizione della Festa dei Ciliegi in Fiore.</p></big>
+
+<p><big>All’interno del volume è contenuto anche l’articolo che Sara Scaglioni, editor di <i>Celebri Vignolesi</i>, ha dedicato alla Sezione Vignolese dell’AVIS Comunale di Vignola ODV, nel settantesimo anniversario della sua costituzione.</p></big><br>
+
+<p><big><strong>Ottobre 2023</strong>: Passeggiate artistico-culturali a Vignola</p></big>
+
+<p><big>In collaborazione con gli <i>Amici dell’Arte APS</i> e con la collaborazione del Comune di Vignola e del Gruppo di documentazione vignolese <i>Mezaluna</i> - Mario Menabue.</p></big><br>
+
+<p><big><strong>Maggio 2023</strong>: Passeggiate artistico-culturali nel cimitero di Vignola capoluogo.</p></big>
+
+<p><big>In collaborazione con gli <i>Amici dell’Arte APS</i> e il Comune di Vignola.</big></p><br>
+
+<p><big><strong>VISITE GUIDATE PRESSO LO STUDIOLO DI L.A. MURATORI</strong>: <i>Celebri Vignolesi</i> si occupa inoltre di tenere aperto lo studiolo di Lodovico Antonio Muratori, sito presso la Casa Natale del grande letterato e, dal 1990, sede degli <i>Amici dell’Arte APS</i>, e di realizzare visite guidate durante l’inaugurazione delle varie esposizioni artistiche.</p></big>
+
+<p><big>In collaborazione con gli <i>Amici dell’Arte APS</i> e il Comune di Vignola.</p></big><br><br>
+
  
 <p><strong><big><big>Gli autori</big></big></strong></p><br>
 
